--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "underscore": "~1.8.3",
+    "lodash": "~3.10.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
