--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-touch": "^1.3.0",
     "angular-ui-router": "~0.2.15",
     "underscore": "~1.8.3",
-    "lodash": "~3.10.1"
+    "lodash": "~3.10.1",
+    "requirejs": "~2.1.20"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
