--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,9 @@
     "angular-ui-router": "~0.2.15",
     "underscore": "~1.8.3",
     "lodash": "~3.10.1",
-    "requirejs": "~2.1.20"
+    "requirejs": "~2.1.20",
+    "connectFour": "https://github.com/alouiseq/connectFour.git",
+    "text": "~2.0.14"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
