--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "requirejs": "~2.1.20",
     "connectFour": "https://github.com/alouiseq/connectFour.git",
     "text": "~2.0.14",
-    "vacation-charts": "https://github.com/alouiseq/vacation-charts.git",
+    "pie-charting": "https://github.com/alouiseq/pie-charting.git",
     "highcharts": "~4.1.8",
     "highcharts-ng": "~0.0.8"
   },
